--- a/package.json
+++ b/package.json
@@ -1,18 +1,31 @@
 {
-  "name": "viraltics-frontend",
+  "name": "viraltics-backend",
   "version": "0.1.0",
   "scripts": {
-    "dev": "next dev -p 3000",
-    "build": "next build",
-    "start": "next start -p 3000"
+    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "build": "tsc",
+    "start": "node dist/index.js"
   },
   "dependencies": {
-    "next": "14.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "express": "^4.18.2",
+    "pg": "^8.10.0",
+    "knex": "^2.4.2",
+    "bcrypt": "^5.1.0",
+    "jsonwebtoken": "^9.0.0",
+    "bullmq": "^1.74.0",
+    "ioredis": "^5.3.2",
+    "aws-sdk": "^2.1360.0",
+    "nodemailer": "^6.9.3",
+    "pino": "^8.8.0",
     "axios": "^1.5.0",
-    "tailwindcss": "^3.5.0",
-    "swr": "^2.2.0",
-    "react-hook-form": "^7.45.0"
+    "crypto-js": "^4.1.1",
+    "pg-format": "^1.0.4",
+    "express-async-handler": "^1.2.0"
+  },
+  "devDependencies": {
+    "typescript": "^5.5.0",
+    "ts-node-dev": "^2.0.0",
+    "@types/express": "^4.17.17",
+    "@types/node": "^20.5.1"
   }
 }
